Include additional drop-in API replacements in sunset notice

--- a/src/views/swagger-v2.jade
+++ b/src/views/swagger-v2.jade
@@ -48,6 +48,9 @@ html(lang='en')
         p
           | #[a(href="https://fullstack.cash/") Fullstack.cash] is free to use for 20 full-node, indexer, and SLPDB requests per minute.
           |  For comprehensive plans, please refer to the #[a(href="https://fullstack.cash/pricing/") pricing page].
+        p
+          | Please also check #[a(href="https://rest.bch.actorforth.org/") rest.bch.actorforth.org] for API
+          |  and #[a(href="https://slpdb.bch.actorforth.org/") slpdb.bch.actorforth.org] for SLPDB.
         p Sincerely, #[br] The Bitcoin.com Team
     #swagger-ui
     script(src='../public/swagger-ui-bundle.js')
